added bibliography section

--- a/battle_thesis.tex
+++ b/battle_thesis.tex
@@ -112,7 +112,14 @@ Long term maintenance.
 %\chapter{[APPENDEX NAME]}
 %[APPENDEX BODY]
 
-\NPSend         
+\begin{thebibliography}{1}  %number of references
+
+\bibitem{working-set}
+P. J. Denning, "The working set model for program behavior", Communications of the ACM 11, 5 (May 1968), 323-333.
+  
+\end{thebibliography}
+
+\NPSend
 
 % This is the official distribution list.
 % Free free to comment out or add your own
