better Chapter 2 title

--- a/battle_thesis.tex
+++ b/battle_thesis.tex
@@ -80,7 +80,7 @@ Department of Defense or the U.S. Government.  IRB Protocol number XXX.}
 
 If you got this far, then the front mater works.
 
-\chapter{Prior and Related Work}
+\chapter{The Evolution of Thrashing and Locality}
 Prior Work
 
 \chapter{Thrashing, Locality, and Implemnting Working Set}
